deployment/kubernetes/marafonet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marafonet
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  selector:
    matchLabels:
      app: marafonet
  template:
    metadata:
      labels:
        app: marafonet
    spec:
      affinity:
        # ⬇⬇⬇ This ensures pods will land on separate hosts
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions: [{ key: app, operator: In, values: [marafonet] }]
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: marafonet
          image: ghcr.io/juturbo/marafonet:latest
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      terminationGracePeriodSeconds: 1
