deployment/kubernetes/matchmaking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmaking
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  selector:
    matchLabels:
      app: matchmaking
  template:
    metadata:
      labels:
        app: matchmaking
    spec:
      containers:
        - name: matchmaking
          image: ghcr.io/juturbo/mf-matchmaking:latest
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      terminationGracePeriodSeconds: 1
