deployment/kubernetes/timeout-watcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeoutwatcher
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: timeoutwatcher
  template:
    metadata:
      labels:
        app: timeoutwatcher
    spec:
      containers:
        - name: timeoutwatcher
          image: ghcr.io/juturbo/mf-timeoutwatcher:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      terminationGracePeriodSeconds: 30
