deployment/kubernetes/local-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-etcd-service
spec:
  type: ExternalName
  externalName: host.minikube.internal
