deployment/kubernetes/marafonet-service.yml
apiVersion: v1
kind: Service
metadata:
  name: marafonet
spec:
  #type: LoadBalancer
  selector: # All the pods with this label will be included in the Service
    app: marafonet
  ports:
  # The Pod's port 5000 will be mapped to the Service's 5000 port
    - port: 5000
      targetPort: http
