deployment/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marafonet-ingress
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: marafonet
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #  - localhost
  #  secretName: marafonet-tls-secret # TODO: set up secret inside cluster
  rules:
  - host: marafo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marafonet
            port:
              number: 5000
